--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
 /.pnp
 .pnp.js
 
@@ -9,7 +8,6 @@
 /coverage
 
 # next.js
-/.next/
 /out/
 
 # production
@@ -32,7 +30,4 @@ yarn-error.log*
 .vercel
 
 # typescript
-*.tsbuildinfo
-next-env.d.ts
-
-/package-lock.json
+node_modules
