--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,16 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/node_modules
 /.pnp
 .pnp.js
+package-lock.json
 
 # testing
 /coverage
 
 # next.js
+/.next/
 /out/
 
 # production
@@ -30,4 +33,5 @@ yarn-error.log*
 .vercel
 
 # typescript
-node_modules
+*.tsbuildinfo
+next-env.d.ts
